# To_Do_List

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b6302fd0896_create_project_and_task_tables.py  62b73a705ab8_add_closedat_column_to_task_model.py  80d3385d21a0_create_project_and_task_tables.py  a6cc7a186406_create_project_and_task_tables.py
src/todo/: cli.py  config.py  exception.py  main.py
src/todo/api/: __init__.py  routers.py
src/todo/api/controller_schemas/: __init__.py
src/todo/api/controller_schemas/requests/: __init__.py  task_requests.py
src/todo/api/controller_schemas/responses/: __init__.py  project_responses.py  task_responses.py
src/todo/api/controllers/: __init__.py  projects_controller.py
src/todo/cli/: console.py
src/todo/commands/: autoclose_overdue.py  scheduler.py
src/todo/db/: base.py  session.py
src/todo/models/: __init__.py  project.py  task.py
src/todo/repositories/: project_repository.py  task_repository.py
src/todo/services/: project_service.py  task_service.py  todo_service.py
src/todo/storage/: in_memory.py
