[project]
name = "todolist"
version = "0.1.0"
description = "\"\""
authors = [
    {name = "Negar Yeganeh",email = "negaryeganeh2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)"
]
[tool.poetry.scripts]
todo = "todo.main:main"
todo-schedule = "todo.commands.scheduler:start_scheduler"
todo-autoclose = "todo.commands.autoclose_overdue:main"

[tool.poetry]
packages = [{include = "todo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
